remove test_all.bat